--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1>Md Editor</h1>
-	<div id="hello"></div>
+	<div id="hello à tous"></div>
 	<script src="/js/bundle.js"></script>
 </body>
 </html>
