--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
 <body>
 	<h1>Bienvenue sur My Markdown Editor</h1>
 	
+
+
+	<script src="/js/jquery.js"></script>
 	<script src="lib/codemirror.js"></script>
 	<script src="mode/markdown/markdown.js"></script>
 	<script src="/js/bundle.js"></script>
