Mise en place de React-codemirror pour editer le markdown

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,21 @@
 </head>
 <body>
 	<h1>Bienvenue sur My Markdown Editor</h1>
+	<div id="container">
+	<div id="editor"></div>
+	<div id="hello"></div>
+	</div>
+	
 	
 
 
 	<script src="/js/jquery.js"></script>
-	<script src="lib/codemirror.js"></script>
-	<script src="mode/markdown/markdown.js"></script>
+	<script src="node_modules/react-dom/dist/react-dom.js"></script>
+	<script src="/lib/codemirror.js"></script>
+	<script src="/mode/javascript/javascript.js"></script>
+	<script src="/mode/markdown/markdown.js"></script>
+	<script src="/mode/xml/xml.js"></script>
 	<script src="/js/bundle.js"></script>
+	<script src="node_modules/marked/marked.min.js"></script>
 </body>
 </html>
