--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,17 @@
 	
 </head>
 <body>
-	<h1>Bienvenue sur My Markdown Editor</h1>
+	<h1>My Markdown Editor</h1>
 	<div id="container">
 	<div id="editor"></div>
-	<div id="hello"></div>
+	<div id="reponseHtml"></div>
 	</div>
 	
 	
 
 
 	<script src="/js/jquery.js"></script>
-	<script src="node_modules/react-dom/dist/react-dom.js"></script>
+	<script src="/node_modules/react-dom/dist/react-dom.js"></script>
 	<script src="/lib/codemirror.js"></script>
 	<script src="/mode/javascript/javascript.js"></script>
 	<script src="/mode/markdown/markdown.js"></script>
