--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>My Markdown Editor</title>
-	<link rel="stylesheet" href="lib/codemirror.css">
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="public/lib/codemirror.css">
+	<link rel="stylesheet" href="public/css/style.css">
 	
 </head>
 <body>
@@ -17,12 +17,12 @@
 	
 
 
-	<script src="/js/jquery.js"></script>
-	<script src="/lib/codemirror.js"></script>
+	<script src="public/js/jquery.js"></script>
+	<script src="public/lib/codemirror.js"></script>
 	<script src="/mode/javascript/javascript.js"></script>
-	<script src="/mode/markdown/markdown.js"></script>
-	<script src="/mode/xml/xml.js"></script>
-	<script src="/js/bundle.js"></script>
+	<script src="public/mode/markdown/markdown.js"></script>
+	<script src="public/mode/xml/xml.js"></script>
+	<script src="public/js/bundle.js"></script>
 
 </body>
 </html>
