--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 		<div id="editor"></div>
 		<div id="reponseHtml"></div>
 	</div>
-	<form action="index.php" method="POST" name="theEditor"> Titre : <input type="text" name="titre"><br/> <input type="button" value="download" name="telecharger"><br/><input type="button" value="Sauvegarder" name="dwnld">
+	<form action="index.php" method="POST" name="theEditor"> Titre : <input type="text" name="titre"><br/><input type="button" value="Sauvegarder" name="dwnld">
 	</form>
 
 	<script src="/js/jquery.js"></script>
