--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 
 	<script src="js/jquery.js"></script>
 	<script src="lib/codemirror.js"></script>
+	<script src="/node_modules/marked/marked.min.js"></script>
 	<script src="mode/javascript/javascript.js"></script>
 	<script src="mode/markdown/markdown.js"></script>
 	<script src="mode/xml/xml.js"></script>
