Ajout police lato

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>My Markdown Editor</title>
 	<link rel="stylesheet" href="lib/codemirror.css">
+	<link href="http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="css/style.css">
 	
 </head>
@@ -14,8 +15,6 @@
 	<div id="reponseHtml"></div>
 	</div>
 	
-	
-
 
 	<script src="js/jquery.js"></script>
 	<script src="lib/codemirror.js"></script>
