--- a/public/index.html
+++ b/public/index.html
@@ -11,20 +11,28 @@
 	
 </head>
 <body>
-	<form>
-		<input/>
-	</form>
-	<h1>My Markdown Editor</h1>
+	<nav>
+		<div class="nav-wrapper">
+			<form>
+        		<div class="input-field">
+          			<input placeholder="Titre du document" id="titredoc" type="text" class="validate">
+          			<label for="titre"></label>
+        		</div>
+    		</form>
+      	</div>
+    </nav>
+	
 	<div id="container">
 		<div id="editor"></div>
 		<div id="reponseHtml"></div>
 		<div id="listedocs">
-			<h4>Mes documents</h2>
+			<h5>Mes documents</h5>
 		</div>
 	</div>
 	<div id="boutons">
 		<a class="waves-effect waves-light btn"><i class="material-icons right">done</i>Sauvegarder</a>
 		<a class="waves-effect waves-light btn"><i class="material-icons right">mode_edit</i>Nouveau document</a>
+		<a class="waves-effect waves-light btn"><i class="material-icons right">play_for_work</i>Télécharger</a>
 	</div>
 	
 
