Boutons supprimés pour être deplacés dans le js

--- a/public/index.html
+++ b/public/index.html
@@ -26,13 +26,8 @@
 		<div id="editor"></div>
 		<div id="reponseHtml"></div>
 		<div id="listedocs">
-			<h5>Mes documents</h5>
+			<h5>Mes documents :</h5>
 		</div>
-	</div>
-	<div id="boutons">
-		<a class="waves-effect waves-light btn"><i class="material-icons right">done</i>Sauvegarder</a>
-		<a class="waves-effect waves-light btn"><i class="material-icons right">mode_edit</i>Nouveau document</a>
-		<a class="waves-effect waves-light btn"><i class="material-icons right">play_for_work</i>Télécharger</a>
 	</div>
 	
 
